--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "devDependencies": {
-    "@types/bn.js": "^4.11.4",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.19",
+    "@types/bn.js": "^5.1.5",
+    "@types/chai": "^4.3.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.8",
     "bn.js": "^5.2.1",
-    "chai": "^4.2.0",
-    "openzeppelin-solidity": "^2.1.2",
-    "solhint": "^3.3.2",
-    "truffle": "5.5.18",
-    "truffle-assertions": "^0.7.2",
-    "typechain": "^0.3.11",
-    "typescript": "^4.2.2",
-    "web3": "^1.2.6"
+    "chai": "^5.1.0",
+    "openzeppelin-solidity": "^3.4.2",
+    "solhint": "^4.5.4",
+    "truffle": "5.11.5",
+    "truffle-assertions": "^0.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.4.5",
+    "web3": "^4.8.0"
   },
   "scripts": {
     "clean": "rm -rf ./build/",
@@ -25,12 +25,14 @@
     "test": "truffle test"
   },
   "dependencies": {
-    "eth-gas-reporter": "^0.2.19",
-    "solidity-coverage": "^0.7.0",
+    "@openzeppelin/contracts": "4.4.1",
+    "eth-gas-reporter": "^0.2.27",
+    "hardhat": "^2.22.3",
+    "solidity-coverage": "^0.8.12",
     "truffle-error": "^0.0.5",
     "truffle-typings": "^1.0.8",
-    "web3-eth": "^1.2.6",
-    "web3-utils": "^1.2.6"
+    "web3-eth": "^4.6.0",
+    "web3-utils": "^4.2.3"
   },
   "version": "0.0.0",
   "os": [
