--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 node_modules
-yarn-error.log
+.env
 .yarn
 
-# generated files
-/build
-/types
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
 /coverage
-/test/*.js.map
-/test/*.js
-package-lock.json
-coverage.json
+/coverage.json
