--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "lint": "solhint 'contracts/**/*.sol'",
     "build": "hardhat compile",
-    "test": "HARDHAT_TESTING=true REPORT_GAS=true npx hardhat test",
-    "test:coverage": "HARDHAT_TESTING=true npx hardhat coverage",
+    "test": "npx hardhat test",
+    "test:gas": "REPORT_GAS=true npx hardhat test",
+    "test:coverage": "npx hardhat coverage",
     "clean": "hardhat clean"
   },
   "repository": {
@@ -17,20 +18,21 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-ignition": "^0.15.2",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.2",
     "@openzeppelin/contracts": "4.4.1",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": ">=9.1.0",
-    "@types/node": ">=18.0.0",
-    "chai": "^4.2.0",
-    "ethers": "^6.4.0",
+    "@types/chai": "4",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.8",
+    "chai": "4",
+    "ethers": "^6.12.1",
     "hardhat": "^2.22.3",
     "hardhat-gas-reporter": "^1.0.8",
     "solhint": "^4.5.4",
